# ato-receipt-to-csv

./: .gitignore  LICENSE  README.md  app.py  capsule.toml  pyproject.toml  requirements.txt
.ato/derived/: capsule.lock.json
samples/: generate_samples.py
templates/: generic_receipt.yml
