[project]
name = "receipt-to-csv"
version = "0.1.0"
description = "Upload receipt PDFs and export date/merchant/total/tax to CSV"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11,<1.0",
    "pyyaml>=6.0,<7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]
